<resources>
    <string name="app_name">Ejercicios</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings1">Capitulo1</string>
    <string name="action_settings2">Capitulo2</string>
    <string name="action_settings3">Capitulo3</string>
    <string name="action_settings4">Capitulo4</string>
    <string name="action_settings5">Capitulo5</string>
    <string name="action_settings6">Capitulo6</string>

    <string name="action_settings1_1">1_01_StylesThemes</string>
    <string name="action_settings1_2">1_02_SystemUi</string>
    <string name="action_settings1_3">1_03_CustomWidgets1</string>
    <string name="action_settings1_4">1_04_AnimateProperty</string>
    <string name="action_settings1_5">1_04_AnimateViewProperty</string>
    <string name="action_settings1_6">1_04_AnimationXML</string>
    <string name="action_settings1_7">1_05_AnimateLayout</string>
    <string name="action_settings1_8">1_06_UniversalApp</string>
    <string name="action_settings1_9">1_07_AdapterViewEmpty</string>
    <string name="action_settings1_10">1_08_CustomList</string>
    <string name="action_settings1_11">1_09_SectionHeaders</string>
    <string name="action_settings1_12">1_10_CompoundControls</string>
    <string name="action_settings1_13">1_11_TransitionAnimations</string>
    <string name="action_settings1_14">1_12_StaticTransforms</string>
    <string name="action_settings1_15">1_13_RecyclerView</string>

    <string name="action_settings2_1">2_01_ActionBar</string>
    <string name="action_settings2_2">2_03-04_Rotation</string>
    <string name="action_settings2_3">2_05_PopUpMenus</string>
    <string name="action_settings2_4">2_06_AlertDialog</string>
    <string name="action_settings2_5">2_07_OptionsMenu</string>
    <string name="action_settings2_6">2_08_CustomBack</string>
    <string name="action_settings2_7">2_10_TextWatchers</string>
    <string name="action_settings2_8">2_11_CustomIME</string>
    <string name="action_settings2_9">2_13-14_CustomTouch</string>
    <string name="action_settings2_10">2_15_TouchIntercept</string>
    <string name="action_settings2_11">2_16_DragTouch</string>
    <string name="action_settings2_12">2_17_DrawerLayout</string>
    <string name="action_settings2_13">2_18_ViewPager</string>
    <string name="action_settings2_14">2_19_Tabs</string>

    <string name="action_settings3_1">3_01-02_WebView</string>
    <string name="action_settings3_2">3_03_JavaScript</string>
    <string name="action_settings3_3">3_05_DMSample</string>
    <string name="action_settings3_4">3_06_REST</string>
    <string name="action_settings3_5">3_07_JSON</string>
    <string name="action_settings3_6">3_08_XmlPull</string>
    <string name="action_settings3_7">3_08_XmlSax</string>
    <string name="action_settings3_8">3_09-10_SMS</string>
    <string name="action_settings3_9">3_11_BluetoothP2P</string>
    <string name="action_settings3_10">3_12_Reachability</string>
    <string name="action_settings3_11">3_13_NFCBeam</string>
    <string name="action_settings3_12">3_14_USBHost</string>

    <string name="action_settings4_1">4_01_MyLocation</string>
    <string name="action_settings4_2">4_02-03_Mapper</string>
    <string name="action_settings4_3">4_04_RegionMonitor</string>
    <string name="action_settings4_4">4_05_ImageCapture</string>
    <string name="action_settings4_5">4_06_CameraOverlay</string>
    <string name="action_settings4_6">4_07_AudioInput</string>
    <string name="action_settings4_7">4_08_VideoCapture</string>
    <string name="action_settings4_8">4_08_VideoOverlay</string>
    <string name="action_settings4_9">4_09_SpeechRecognizer</string>
    <string name="action_settings4_10">4_10_Playback</string>
    <string name="action_settings4_11">4_11_SoundPool</string>
    <string name="action_settings4_12">4_12_TiltSensor</string>
    <string name="action_settings4_13">4_13_CompassMonitor</string>
    <string name="action_settings4_14">4_14_MetadataRetriever</string>
    <string name="action_settings4_15">4_15_UserMotionActivity</string>

    <string name="action_settings5_1">5_01_Preferences</string>
    <string name="action_settings5_2">5_01_PreferencesNew</string>
    <string name="action_settings5_3">5_02_CustomPreference</string>
    <string name="action_settings5_4">5_03_SimplePersist</string>
    <string name="action_settings5_5">5_04-05_Files</string>
    <string name="action_settings5_6">5_06_Databases</string>
    <string name="action_settings5_7">5_09_ShareDatabase</string>
    <string name="action_settings5_8">5_10_AccessPreferences</string>
    <string name="action_settings5_9">5_10_SharePreferences</string>
    <string name="action_settings5_10">5_11_ShareData</string>
    <string name="action_settings5_11">5_12_ShareDocuments</string>

    <string name="action_settings6_1">6_01_Notifications</string>
    <string name="action_settings6_2">6_02_Timing</string>
    <string name="action_settings6_3">6_03_Alarms</string>
    <string name="action_settings6_4">6_04_IntentService</string>
    <string name="action_settings6_5">6_05_Service</string>
    <string name="action_settings6_6">6_06_ShareProvider</string>
    <string name="action_settings6_7">6_06-07_IntentLauncher</string>
    <string name="action_settings6_8">6_08_MatchMaker</string>
    <string name="action_settings6_9">6_09_Contacts</string>
    <string name="action_settings6_10">6_10-11_MediaStore</string>
    <string name="action_settings6_11">6_12_SmsProvider</string>
    <string name="action_settings6_12">6_13_Calendar</string>
    <string name="action_settings6_13">6_14_Logger</string>
    <string name="action_settings6_14">6_15_BackgroundWorker</string>
    <string name="action_settings6_15">6_16_TaskStack</string>
    <string name="action_settings6_16">6_16_TaskStackLaunch</string>
    <string name="action_settings6_17">6_17_AppWidget</string>
    <string name="action_settings6_18">6_18_RestrictedProfiles</string>

</resources>
