<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings1"
        android:title="@string/action_settings1"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <!-- **********************************-CAPITULO 1**************************************** -->
        <menu>
            <item android:id="@+id/action_settings1_1"
                android:title="@string/action_settings1_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_2"
                android:title="@string/action_settings1_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_3"
                android:title="@string/action_settings1_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_4"
                android:title="@string/action_settings1_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_5"
                android:title="@string/action_settings1_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_6"
                android:title="@string/action_settings1_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_7"
                android:title="@string/action_settings1_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_8"
                android:title="@string/action_settings1_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_9"
                android:title="@string/action_settings1_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_10"
                android:title="@string/action_settings1_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_11"
                android:title="@string/action_settings1_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_12"
                android:title="@string/action_settings1_12"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_13"
                android:title="@string/action_settings1_13"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_14"
                android:title="@string/action_settings1_14"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings1_15"
                android:title="@string/action_settings1_15"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        </menu>
    </item>
    <!-- **********************************-CAPITULO 2**************************************** -->
    <item android:id="@+id/action_settings2"
        android:title="@string/action_settings2"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_settings2_1"
                android:title="@string/action_settings2_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_2"
                android:title="@string/action_settings2_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_3"
                android:title="@string/action_settings2_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_4"
                android:title="@string/action_settings2_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_5"
                android:title="@string/action_settings2_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_6"
                android:title="@string/action_settings2_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_7"
                android:title="@string/action_settings2_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_8"
                android:title="@string/action_settings2_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_9"
                android:title="@string/action_settings2_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_10"
                android:title="@string/action_settings2_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_11"
                android:title="@string/action_settings2_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_12"
                android:title="@string/action_settings2_12"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_13"
                android:title="@string/action_settings2_13"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings2_14"
                android:title="@string/action_settings2_14"
                android:orderInCategory="100"
                app:showAsAction="never"/>

        </menu>
    </item>
    <!-- **********************************-CAPITULO 3**************************************** -->
    <item android:id="@+id/action_settings3"
        android:title="@string/action_settings3"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_settings3_1"
                android:title="@string/action_settings3_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_2"
                android:title="@string/action_settings3_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_3"
                android:title="@string/action_settings3_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_4"
                android:title="@string/action_settings3_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_5"
                android:title="@string/action_settings3_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_6"
                android:title="@string/action_settings3_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_7"
                android:title="@string/action_settings3_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_8"
                android:title="@string/action_settings3_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_9"
                android:title="@string/action_settings3_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_10"
                android:title="@string/action_settings3_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_11"
                android:title="@string/action_settings3_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings3_12"
                android:title="@string/action_settings3_12"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        </menu>
    </item>
    <!-- **********************************-CAPITULO 4**************************************** -->
    <item android:id="@+id/action_settings4"
        android:title="@string/action_settings4"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_settings4_1"
                android:title="@string/action_settings4_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_2"
                android:title="@string/action_settings4_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_3"
                android:title="@string/action_settings4_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_4"
                android:title="@string/action_settings4_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_5"
                android:title="@string/action_settings4_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_6"
                android:title="@string/action_settings4_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_7"
                android:title="@string/action_settings4_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_8"
                android:title="@string/action_settings4_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_9"
                android:title="@string/action_settings4_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_10"
                android:title="@string/action_settings4_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_11"
                android:title="@string/action_settings4_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_12"
                android:title="@string/action_settings4_12"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_13"
                android:title="@string/action_settings4_13"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_14"
                android:title="@string/action_settings4_14"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings4_15"
                android:title="@string/action_settings4_15"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        </menu>
    </item>
    <!-- **********************************-CAPITULO 5**************************************** -->
    <item android:id="@+id/action_settings5"
        android:title="@string/action_settings5"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_settings5_1"
                android:title="@string/action_settings5_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_2"
                android:title="@string/action_settings5_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_3"
                android:title="@string/action_settings5_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_4"
                android:title="@string/action_settings5_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_5"
                android:title="@string/action_settings5_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_6"
                android:title="@string/action_settings5_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_7"
                android:title="@string/action_settings5_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_8"
                android:title="@string/action_settings5_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_9"
                android:title="@string/action_settings5_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_10"
                android:title="@string/action_settings5_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings5_11"
                android:title="@string/action_settings5_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>

        </menu>

    </item>
    <!-- **********************************-CAPITULO 6**************************************** -->
    <item android:id="@+id/action_settings6"
        android:title="@string/action_settings6"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_settings6_1"
                android:title="@string/action_settings6_1"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_2"
                android:title="@string/action_settings6_2"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_3"
                android:title="@string/action_settings6_3"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_4"
                android:title="@string/action_settings6_4"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_5"
                android:title="@string/action_settings6_5"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_6"
                android:title="@string/action_settings6_6"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_7"
                android:title="@string/action_settings6_7"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_8"
                android:title="@string/action_settings6_8"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_9"
                android:title="@string/action_settings6_9"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_10"
                android:title="@string/action_settings6_10"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_11"
                android:title="@string/action_settings6_11"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_12"
                android:title="@string/action_settings6_12"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_13"
                android:title="@string/action_settings6_13"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_14"
                android:title="@string/action_settings6_14"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_15"
                android:title="@string/action_settings6_15"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_16"
                android:title="@string/action_settings6_16"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_17"
                android:title="@string/action_settings6_17"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:id="@+id/action_settings6_18"
                android:title="@string/action_settings6_18"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>
